--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-icons": "^4.10.1",
     "react-router-dom": "^6.14.1",
     "react-scripts": "5.0.1",
+    "react-scroll": "^1.9.0",
     "react-slick": "^0.29.0",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.0.4",
@@ -25,7 +26,6 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "clean": "gh-pages-clean"
-   
   },
   "eslintConfig": {
     "extends": [
@@ -45,5 +45,4 @@
       "last 1 safari version"
     ]
   }
- 
 }
